<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".list"
    android:tileMode="disabled"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/fruitimage"
            android:layout_width="307dp"
            android:layout_height="352dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/apple" />

        <TextView
            android:id="@+id/fruitname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:text="@string/apple"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/fruitimage"
            app:layout_constraintHorizontal_bias="0.646"
            app:layout_constraintStart_toStartOf="@+id/fruitimage"
            app:layout_constraintTop_toTopOf="@+id/fruitimage" />

        <TextView
            android:id="@+id/fruitdescriptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this_is_a_sweet_apple"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="@+id/fruitimage"
            app:layout_constraintEnd_toEndOf="@+id/fruitimage"
            app:layout_constraintStart_toStartOf="@+id/fruitimage"
            app:layout_constraintTop_toBottomOf="@+id/fruitname"
            app:layout_constraintVertical_bias="0.262"
            tools:targetApi="o" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>