<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".choices">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="1184dp"
        android:layout_height="1518dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.629"
        app:srcCompat="@drawable/bg" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="441dp"
        android:layout_height="91dp"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/select" />



    <RadioGroup
        android:id="@+id/radioFruits"
        android:layout_width="794dp"
        android:layout_height="640dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:layout_constraintVertical_bias="0.159">

        <RadioButton
            android:id="@+id/fruits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="250dp"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="164dp"
            android:layout_marginRight="164dp"
            android:layout_marginBottom="79dp"
            android:text="@string/fruits"
            android:textColor="@color/white"
            android:textSize="50sp"
            />

        <RadioButton
            android:id="@+id/vegetables"
            android:layout_width="301dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="250dp"
            android:layout_marginLeft="250dp"
            android:layout_marginEnd="164dp"
            android:layout_marginRight="164dp"
            android:layout_marginBottom="79dp"
            android:text="@string/vegetables"
            android:textColor="@color/white"
            android:textSize="50sp" />

        <RadioButton
            android:id="@+id/grains"
            android:layout_width="301dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="250dp"
            android:layout_marginLeft="250dp"
            android:layout_marginEnd="164dp"
            android:layout_marginRight="164dp"
            android:layout_marginBottom="79dp"
            android:text="@string/grains"
            android:textColor="@color/white"
            android:textSize="50sp" />


    </RadioGroup>

    <ImageButton
        android:id="@+id/optionBtn"
        android:layout_width="407dp"
        android:layout_height="231dp"
        android:background="@null"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioFruits"
        app:layout_constraintVertical_bias="0.777"
        app:srcCompat="@drawable/next"
        android:onClick="onSubmit"

        />

</androidx.constraintlayout.widget.ConstraintLayout>